Start Comfort Items Form
This adds the basic plumbing for adding the concept of member
profiles and more specifically adding comfort items such as
food or something more general to your community profile so that
people can let the other peopel ini the community know how they
would like to be comforted
